--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,13 +7,21 @@
 </ion-header>
 
 <ion-content padding>
+
+
+
   <ion-list>
-    <ion-item-sliding *ngFor="let item of items; let i = index">
+    <ion-item-sliding *ngFor="let item of loadItem(); let i = index">
       <ion-item>
         <h2>{{item.name}}</h2>
         <p>{{item.quantity}}</p>
       </ion-item>
       <ion-item-options>
+        <button (click)="editItem(item, i)" ion-button colors="primary" icon-start>
+          <ion-icon name="create"></ion-icon>
+          Edit
+        </button>
+
         <button (click)="removeItem(item, i)" ion-button colors="secondary" icon-start>
           <ion-icon name="trash"></ion-icon>
           Done
