--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,6 +22,11 @@
           Edit
         </button>
 
+        <button (click)="shareItem(item, i)" ion-button colors="light" icon-start>
+          <ion-icon name="share"></ion-icon>
+          Share
+        </button>
+
         <button (click)="removeItem(item, i)" ion-button colors="secondary" icon-start>
           <ion-icon name="trash"></ion-icon>
           Done
